Update CompassManager.java